--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.1.3",
+    "honeycomb-grid": "^4.1.1",
     "ngx-bootstrap": "^10.2.0",
     "pixi.js": "^7.2.4",
     "rxjs": "~7.8.0",
