--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
             "styles": [
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/theme.scss",
               "src/styles.css"
             ],
             "scripts": []
